去除编译WARNING